<?xml version="1.0"?>
<package format="2">
  <name>semantic_octomap_mapping</name>
  <version>1.0.0</version>
  <description>
    S2P-SLAM structural-periodicity factor-graph estimation and
    spatiotemporal semantic OctoMap maintenance.
  </description>

  <maintainer email="Jiangjiacheng-scau@users.noreply.github.com">Jiacheng Jiang</maintainer>
  <!-- Select a repository license explicitly before redistributing binaries. -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  <depend>gtsam</depend>
  <exec_depend>faster_lio</exec_depend>

  <export/>
</package>
